--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: demonstration
 on: push
 jobs: 
     my-job:
-        runs-on: ubuntu@latest
+        runs-on: self-hosted
         steps:
             - name: my-step
               run: echo "Hello World!123"
