--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,4 +5,5 @@ jobs:
         runs-on: self-hosted
         steps:
             - name: my-step
-              run: echo "Hello World!123"
+              run: pwd
+            
