--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,5 +5,5 @@ jobs:
         runs-on: self-hosted
         steps:
             - name: my-step
-              run: ls -a
+              run: mkdir sample
             
