--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: private/repository
+          ref: main
           token: ${{ secrets.TOKEN }}
 
       - name: Deploy to Shared Hosting
