--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          repository: demo
+          repository: dev-rakesh-88/demo
           ref: main
           token: ${{ secrets.TOKEN }}
 
